--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.ContextPath=/Aplicacion
+server.contextPath=/Aplicacion
 spring.datasource.url=jdbc:mysql://localhost:3306/basetason
 spring.datasource.username=alex
 spring.datasource.password=12345
